fix: stop bold nav causing jump on select change

--- a/frontend/components/NavItem/NavItem.css
+++ b/frontend/components/NavItem/NavItem.css
@@ -29,7 +29,7 @@
 }
 
 .nav-item-active {
-  font-weight: bold;
+  text-shadow: 0px 0px 1px var(--theme-colour-system, #ffbf0d);
   color: var(--theme-colour-system, #ffbf0d);
 }
 
